--- a/Sales_Forecasting/contact_us.html
+++ b/Sales_Forecasting/contact_us.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="styles/contact_usUI_Style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <script type="text/javascript">
+      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/5f033a05760b2b560e6fd5c8/default';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+      })();
+      </script>
 </head>
 
 <body>
