--- a/Sales_Forecasting/index.html
+++ b/Sales_Forecasting/index.html
@@ -45,19 +45,28 @@
         <!--Now that we added an image, we need to place text and buttons on it-->
         <section id="index_introduction_top">
             <!--Creating a future link for the burger menu-->
-            <a href="https://www.google.com">
+            <a href="" onclick="openNav()">
                 <img id="index_introduction_burger" src="Resources/burger.png" />
             </a>
-            <!--A Logo that works with the host name and a fitting icon -->
-            <a href="https://www.jaxifysoftware.com"><img id="index_introduction_logo" src="Resources/Logo.webp" /></a>
-            <ul id="index_introduction_menu">
-                <a>
-                    <li id="index_into_men_signin">Sign In</li>
-                </a>
-                <a href="contact_us.html">
-                    <li id="index_into_men">Contact Us</li>
-                </a>
-            </ul>
+
+            <div id="mySidebar" class="sidebar">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a
+          >
+          <!--Enter Search History-->
+        </div>
+
+        <!--A Logo that works with the host name and a fitting icon -->
+        <a href="https://www.jaxifysoftware.com"
+          ><img id="index_introduction_logo" src="Resources/Logo.webp"
+        /></a>
+                <ul id="index_introduction_menu">
+                    <a>
+                        <li id="index_into_men_signin">Sign In</li>
+                    </a>
+                    <a href="contact_us.html">
+                        <li id="index_into_men">Contact Us</li>
+                    </a>
+                </ul>
         </section>
         <!--Seach Feature-->
         <section id="index_search">
