--- a/Sales_Forecasting/index.html
+++ b/Sales_Forecasting/index.html
@@ -32,7 +32,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Title of the website (text in tab)-->
-    <title>Jaxify Software - Sales Forcasting</title>
+    <title>Jaxify Software - Sales Forecasting</title>
 </head>
 
 <body>
@@ -80,14 +80,10 @@
         <section id="index_buttons">
             <ul>
                 <a href="my_account.html">
-                    <li id="index_btn">
-                        Profile
-                    </li>
+                    <li id="index_btn">Profile</li>
                 </a>
                 <a href="membership.html">
-                    <li id="index_btn">
-                        Store
-                    </li>
+                    <li id="index_btn">Store</li>
                 </a>
                 <a href="developers.html">
                     <!--Dev-->
@@ -97,9 +93,7 @@
                     </li>
                 </a>
                 <a href="help.html">
-                    <li id="index_btn">
-                        Help
-                    </li>
+                    <li id="index_btn">Help</li>
                 </a>
             </ul>
         </section>
