--- a/Sales_Forecasting/help.html
+++ b/Sales_Forecasting/help.html
@@ -9,31 +9,37 @@
 </head>
 
 <body class="helpBody">
-    <p style="color: red; text-align: center;">
-        [2 May 2020] PLEASE NOTE - THIS WEBSITE IS CURRENTLY UNDER DEVELOPMENT BY A TEAM OF 5 STUDENTS AT BELGIUM CAMPUS ITVERSITY, NOTHING IS FINAL AND THERE WILL BE WIP ALL OVER THE WEBSITE
+    <h1>Welcome to the HELP Section</h1>
+
+    <h1>Functionality</h1>
+    <p>
+        Sales Forecasting wants to help you predict sales for your website by using modern technologies to see how your search query would look in the near future.
     </p>
-    <h1> 
-    <h1>The following are common problems that occur:</h1>
-    
-    <h2> How to contact us: </h2>
-    <p>Step 1: Go to the contact us page: <a href="contact_us.html> click here to go into the contact us page</a><br>
-       Step 2: Choose a medium of contacting us that best suits you, and we will get back to you as swiftly as possible.</p><br>
-
-    <h2>How to Search :</h2>
-    <p>Step 1: Make sure you are signed in to your account at the sign in page: <a href="sign_in.html">click here to sign in</a><br>
-    Step 2: Go to our home page: <a href= "index.html" > click here for home page</a>, there you will find a search space with an example of what you can search<br>
-    Step 3: Insert the item or keyword you are looking for in this search box<br>
-    Step 4: Press the search button and your result will be displayed. If your results are not displayed, please contact us through our information on our help page : <a href= "contact_us.html">click here to report problems</a></p><br>
-    
-    <h2>What to do if you forget your password: </h2>
-    <p>Step 1: Go to the forgot password page: <a href="forget_password.html"> click here to go into the forgot password page</a><br>
-    Step 2: Follow the steps that are displayed. If this does not work, please feel free to contact us: <a href="contact_us.html" > click here to contact us</a></p><br>
-
-    <h2>How to view and edit your account information: </h2>
-    <p> Step 1: Make sure that you are signed in by going to the sign in page: <a href="sign_in.hml" click here to sign in to your account<\a><br>
-    Step 2: Go to the account page: <a href="my_account.html"> click here to go into the account page</a><br> in order to view or change your account details. 
-    Step 3: If this does not work, please feel free to contact us: <a href="contact_us.html" > click here to contact us</a></p><br>
-
+    <p>
+        We Ensure our results are accurate as we use modern API's with mathematical equations to predict your search results in a chart form / event based system.
+    </p>
+    <h1>User Accounts</h1>
+    <p>
+        The user will have access to sign into their account and have their search history stored on their names. The user will be able to buy memberships and scalable permissions to gain access to more features such as no ads, unlimited searches, and much more.
+    </p>
+    <h1>User Profile</h1>
+    <p>
+        Users will have full access to set and read their profile details, this can be used to give birthday special access, refer other users and gain referral currency, and much more.
+    </p>
+    <h1>Contact Us</h1>
+    <p>
+        All users will have access to chat to us live by using out built in chat function. Our customers are important to us!
+    </p>
+    <h1>Need any more help?</h1>
+    <a href="mailto: info@jaxifysoftware.com">
+        <h2>Send Mail</h2>
+    </a>
+    <a href="tel:+27828826870">
+        <h2>Call Us</h2>
+    </a>
+    <a href="../contact_us.html">
+        <h2>Contact Us</h2>
+    </a>
 </body>
 
 </html>
