--- a/Sales_Forecasting/help.html
+++ b/Sales_Forecasting/help.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="helpBody">
-    <h1>Welcome to the HELP Section</h1>
+    <h1>Welcome to the Help Section</h1>
 
     <h1>Functionality</h1>
     <p>
@@ -39,6 +39,9 @@
     </a>
     <a href="../contact_us.html">
         <h2>Contact Us</h2>
+    </a>
+    <a href="../index.html">
+        <h2>Go Back</h2>
     </a>
 </body>
 
