--- a/Sales_Forecasting/search_results.html
+++ b/Sales_Forecasting/search_results.html
@@ -4,10 +4,10 @@
 <head>
     <!--<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
     <!-- Jaxify Software - Search Results -->
-    <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-2887967406057408" data-ad-slot="9216626532" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <!--   <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-2887967406057408" data-ad-slot="9216626532" data-ad-format="auto" data-full-width-responsive="true"></ins>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    </script>-->
     <link rel="shortcut icon" type="image/png" href="Resources/favicon.png" />
     <link rel="stylesheet" href="styles/search_resultsUI_Style.css" />
     <meta charset="UTF-8" />
