Added Loading Functionality & Fixed Forecasting Bugs

--- a/Sales_Forecasting/search_results.html
+++ b/Sales_Forecasting/search_results.html
@@ -17,12 +17,13 @@
 
 <body>
     <div id="overlay"></div>
+    <div id="loading"></div>
 
     <div id="loader"></div>
 
     <section>
         <h1 id="results_query">Loading...</h1>
-        <table id="mainTable" border="3px" cellspacing="10px" style="letter-spacing: 2px">
+        <table class="center" id="mainTable" border="3px" cellspacing="10px" style="letter-spacing: 2px">
             <tr>
                 <th>Company</th>
                 <th>Year</th>
@@ -43,7 +44,7 @@
         </table>
         <br />
         <br />
-        <button onclick="addYear()">Add A Year Data</button>
+        <button class="center" onclick="addYear()">Add A Year Data</button>
     </section>
 </body>
 <!--Linking JS Code in JS Folder-->
