--- a/Sales_Forecasting/search_results.html
+++ b/Sales_Forecasting/search_results.html
@@ -45,6 +45,10 @@
         <br />
         <br />
         <button class="center" onclick="addYear()">Add A Year Data</button>
+        <br />
+        <br />
+        <br />
+        <button class="center" onclick="genRand()">Generate Random</button>
     </section>
 </body>
 <!--Linking JS Code in JS Folder-->
