Added Go Back Button

--- a/Sales_Forecasting/search_results.html
+++ b/Sales_Forecasting/search_results.html
@@ -57,6 +57,9 @@
         <br />
         <br />
         <br />
+        <button class="center" onclick="location.href = 'index.html';">
+        Go Back
+      </button>
     </section>
 </body>
 <!--Linking JS Code in JS Folder-->
