Removed Search History

--- a/Sales_Forecasting/index.html
+++ b/Sales_Forecasting/index.html
@@ -36,7 +36,6 @@
 </head>
 
 <body>
-
     <script type="text/javascript" src="js/burgerIcon.js"></script>
     <!--Creating various sections of the website, we want the website to be
     modern looking with sections from top to bottom, we want everything looking polished
@@ -52,28 +51,22 @@
                 
                
            </a>-->
-
-            <div class="dropdown">
-
-                <button class="dropbtn">Search History</button>
-                <!--<a href="" onclick="SearchHistory()">-->
-                <script>
-                    src = "js/main.js"
-                </script>
-                <div class="dropdown-content">
-                    <a href="#">Hand Sanitizer</a>
-                    <a href="#">TV</a>
-                    <a href="#">Iphone</a>
-                </div>
-            </div>
-
-
-
-
+            <!---->
+            <!--  <div class="dropdown">-->
+            <!--<button class="dropbtn">Search History</button>-->
+            <!--<a href="" onclick="SearchHistory()">-->
+            <!--<script>-->
+            <!-- src = "js/main.js"-->
+            <!-- </script>-->
+            <!--<div class="dropdown-content">-->
+            <!--<a href="#">Hand Sanitizer</a>-->
+            <!--<a href="#">TV</a>-->
+            <!--<a href="#">Iphone</a>-->
+            <!--</div>-->
+            <!--</div>-->
 
             <!--Enter Search History-->
-            </div>
-
+            <!--     </div>-->
 
             <!--A Logo that works with the host name and a fitting icon -->
             <a href="https://www.jaxifysoftware.com"><img id="index_introduction_logo" src="Resources/Logo.webp" /></a>
