--- a/Sales_Forecasting/search_results.html
+++ b/Sales_Forecasting/search_results.html
@@ -52,7 +52,9 @@
         <br />
         <br />
         <br />
-        <button class="center" onclick="genRand()">Generate Random</button>
+        <button class="center" onclick="genRand()">
+        Automatically Generate Company Data
+      </button>
 
         <br />
         <br />
