--- a/index.html
+++ b/index.html
@@ -1,242 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta http-equiv = "refresh" content = "0; url = "project.jaxifysoftware.com/Sales_Forecasting" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141187901-3"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-141187901-3');
-    </script>
-
-    <link rel="shortcut icon" type="image/png" href="Sales_Forecasting/Resources/favicon.png" />
-
-    <meta name="description" content="Get Your Software Idea Coded - Order Affordable Custom Coded Website, Desktop And Mobile Applications" />
-    <meta name="robots" content="Custom Software, Code Custom Software, Order Custom Website, Order Custom Software, Hire A Developer" />
-    <meta name="googlebot" content="Custom Software, Code Custom Software, Order Custom Website, Order Custom Software, Hire A Developer" />
-
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="styling/style.css" />
-    <title>Jaxify Software - Order Custom Affordable Software</title>
-</head>
-
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#offer-1">What We Offer</a></li>
-                <li><a href="#slideshow">Example Software</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <!-- <li>
-                    <a href="Sales_Forecasting/home.html">Sales Forecasting</a>
-                </li>
-                -->
-            </ul>
-        </nav>
-    </header>
-    <section>
-        <div id="main">
-
-            <h1 class="title">Jaxify Software</h1>
-            <h2>Order Custom Affordable Websites & Software For Your Convienience</h2>
-            <img src="/Sales_Forecasting/Resources/favicon.png">
-
-        </div>
-        <section id="about">
-            <h1 style="margin-bottom: 2%;">Who Are We?</h1>
-            <section class="border">
-                <br />
-                <p>
-                    Jaxify Software is an innovative company consisting of highly skilled freelance Developers looking to make your life easier.
-                </p>
-                <p>
-                    Everyone has some kind of software idea on the mind that they wish to bring to life, whether it’s the next exercise application or a website for an event, wedding, or gift to someone. You might even want to get a program created for your computer to make
-                    your life easier or save you time and money, but not everyone knows how to do that. That’s why we’ve created Jaxify Software!
-                </p>
-
-
-                <br />
-            </section>
-            <section>
-                <section id="offer">
-                    <h1>Why Choose Us?</h1>
-                    <section class="borderOffer">
-                        <br>
-                        <p>We are Affordable! Many highly skilled developers out there are passionate to create your next product, purely because they enjoy what they do! We take on small projects ranging from R150 all the way up to highly professional software.
-                        </p>
-
-                        <br />
-
-                    </section>
-                </section>
-                <section>
-                    <section id="offer">
-                        <h1>You Name Your Price</h1>
-                        <section class="borderOffer">
-                            <br>
-                            <p>No one likes spending money, that's why you give us your idea, with a suggested price and we’ll communicate with you from there on! Many times developers are looking to improve their skills and tend to be happy with your suggested
-                                price.
-                            </p>
-
-                            <br />
-
-                        </section>
-                    </section>
-
-                    <section>
-                        <section id="offer">
-                            <h1>We Are Fast</h1>
-                            <section class="borderOffer">
-                                <br>
-                                <p>Waiting for something to be created for you can be frustrating, to say the least. Jaxify Software has freelance developers who are passionate about creating your software with really high quality and tend to work on your
-                                    project with the intention of getting it done ASAP for your convenience! Depending on the size of the project, deliveries can range from 1 day to a week to 1+ Months for very large projects.
-                                </p>
-
-                                <br />
-
-                            </section>
-                        </section>
-                        <section>
-                            <section id="offer">
-                                <h1>Modern User Interfaces</h1>
-                                <section class="borderOffer">
-                                    <br>
-                                    <p>We design our software with the most modern technologies in order to create you beautiful, polished and professional-looking software based on your suggested theme.
-                                    </p>
-
-                                    <br />
-
-                                </section>
-                            </section>
-
-                            <section>
-                                <section id="offer">
-                                    <h1>We’re Only Happy When You Are</h1>
-                                    <section class="borderOffer">
-                                        <br>
-                                        <p>If you don't like the way we did something, tell us! We want to keep working until you are 100% satisfied with the outcome of your requested software!
-                                        </p>
-
-                                        <br />
-
-                                    </section>
-                                </section>
-
-                                <section>
-                                    <section id="offer">
-                                        <h1>No Watermarks</h1>
-                                        <section class="borderOffer">
-                                            <br>
-                                            <p>Unlike website builders, we manually code all our work and ensure it is optimized for your situation while looking professional and being of a high standard. We don't leave any of those nasty watermarks, we
-                                                will assist you in any steps after the creation of your software should you wish to have it hosted and have a custom domain address.
-                                            </p>
-
-                                            <br />
-
-                                        </section>
-                                    </section>
-
-
-                                    <section>
-                                        <section id="offer-1">
-                                            <h1>What We Offer</h1>
-                                            <section class="borderOffer">
-                                                <br>
-                                                <p>Manual Web Development</p>
-                                                <br />
-                                                <p>Desktop Software Development</p>
-                                                <br />
-                                                <p>Mobile Application Development</p>
-                                                <br>
-                                                <p>Automation Script Development To Save You Time & Money</p>
-                                                <br>
-                                                <p>Modern User Interface Designs To Suit Your Needs</p>
-                                                <br />
-
-                                                <p>Affordable Prices For Every Type Of Software</p>
-                                                <br />
-
-                                                <p>Different Themes Based On Your Preference</p>
-                                                <br />
-
-                                            </section>
-                                        </section>
-                                        <section id="developer">
-
-                                        </section>
-                                    </section>
-                                </section>
-                                <section id="slideshow">
-                                    <h1>What We've Created</h1>
-                                    <br>
-                                    <br>
-
-                                    <!-- Slideshow container -->
-                                    <div class="slideshow-container">
-
-                                        <!-- Full-width images with number and caption text -->
-                                        <div class="mySlides">
-                                            <div class="numbertext">1 / 3</div>
-                                            <img src="slide_02.webp" style="width:100%">
-                                            <div class="text">Sales Forecasting Website</div>
-                                        </div>
-
-                                        <div class="mySlides">
-                                            <div class="numbertext">2 / 3</div>
-                                            <img src="slide_01.webp" style="width:100%;">
-                                            <div class="text">Wedding Website</div>
-                                        </div>
-
-                                        <div class="mySlides">
-                                            <div class="numbertext">3 / 3</div>
-                                            <img src="slide_03.webp" style="width:100%">
-                                            <div class="text">Desktop Electronic Voting Software</div>
-                                        </div>
-
-                                        <!-- Next and previous buttons -->
-                                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                                    </div>
-                                    <br>
-
-                                    <!-- The dots/circles -->
-                                    <div style="text-align:center">
-                                        <span class="dot" onclick="currentSlide(1)"></span>
-                                        <span class="dot" onclick="currentSlide(2)"></span>
-                                        <span class="dot" onclick="currentSlide(3)"></span>
-                                    </div>
-                                    <section id="contact" style="margin-top: 3%;">
-                                        <h1>Are You Interested?<br>Contact Us!</h1>
-                                        <br>
-                                        <div class="container">
-                                            <div class="card-body">
-                                                <form action="https://formspree.io/xaypjpgv" method="POST">
-                                                    <input type="text" name="name" placeholder="Your Name" class="form-control mb-2 text-center">
-                                                    <input type="email" name="_replyto " placeholder="Your E-Mail Address" class="form-control mb-2 text-center">
-                                                    <textarea rows="7" name="message" placeholder="Your Message To Us" class="form-control text-center"></textarea>
-                                                    <button class="btn btn-success" name="submit">Send Message</button>
-                                                </form>
-                                            </div>
-                                        </div>
-                                        <footer>Copyright © Jaxify Software 2020 - Daniël (Jaco) Van Stryp</footer>
-                                    </section>
-
-                                    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
-                                    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
-                                    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
-</body>
-<script src="main.js "></script>
-
+    <head>
+    <meta http-equiv="refresh" content="0; URL=./Sales_Forecasting" />
+    </head>
+    <body>
+        <h1>Loading...</h1>
+    </body>
 </html>
