--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-    <meta http-equiv="refresh" content="0; URL=./Sales_Forecasting" />
+    <meta http-equiv="refresh" content="0; URL=project.jaxifysoftware.com/Sales_Forecasting" />
     </head>
     <body>
         <h1>Loading...</h1>
